--- a/package.json
+++ b/package.json
@@ -13,8 +13,10 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "assert": "^2.0.0",
     "axios": "^1.3.4",
     "country-codes-list": "^1.6.10",
+    "loading-spinner": "^1.2.1",
     "path": "^0.12.7",
     "randomstring": "^1.2.3",
     "react": "^18.2.0",
@@ -25,7 +27,9 @@
     "react-router-dom": "^6.9.0",
     "react-scripts": "^5.0.1",
     "react-slick": "^0.29.0",
+    "readline": "^1.3.0",
     "slick-carousel": "^1.8.1",
+    "spinners-react": "^1.0.7",
     "stream": "^0.0.2",
     "web-vitals": "^2.1.4"
   },
