--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-icons": "^4.8.0",
     "react-modal": "^3.16.1",
     "react-owl-carousel": "^2.3.3",
+    "react-responsive-carousel": "^3.2.23",
     "react-router-dom": "^6.9.0",
     "react-scripts": "^5.0.1",
     "react-slick": "^0.29.0",
